[package]
name = "Dannesk"
version = "0.5.0"
edition = "2024"

[dependencies]
egui = "0.32.3"
eframe = "0.32.3"  
xrpl-rust = "0.5.0"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] } # Add native-tls feature
futures-util = "0.3.31"        # For StreamExt and SinkExt
rippled_binary_codec = "0.0.5"
uuid = { version = "1.10", features = ["v4"] }
zeroize = { version = "1.8.1", features = ["derive"] }
once_cell = "1.20.2"
bitcoin = "0.32.6" 
secp256k1 = "0.31.0" 
bip39 = "2.0.0"
egui_extras = { version = "0.32.1", features = ["svg", "file", "image"] }
ring = "0.17.8"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
keyring = { version = "3.3.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6.0.0"
reqwest = { version = "0.12.8", features = ["json"] } # Added for HTTP requests
tempfile = "3.23.0"
zip = "5.1.1"
tar = "0.4"
flate2 = "1.0"
self-replace = "1.4.0" # Use the latest version as of October 2025



[build-dependencies]
winres = "0.1" 

