[package]
name = "Dannesk"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2"}
dioxus-native = "0.7.2"
winit = "0.30"
xrpl-rust = "1.0.0"
ripple-address-codec = "0.1.1"
rippled_binary_codec = "0.0.5"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"  # For StreamExt and SinkExt
uuid = { version = "1.10", features = ["v4"] }
zeroize = { version = "1.8.1", features = ["derive", "serde"] }
once_cell = "1.20.2"
bitcoin = "0.32.6" 
secp256k1 = "0.31.0" 
bip39 = "2.0.0"
ring = "0.17.8"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
dirs = "6.0.0"
reqwest = { version = "0.12.8", features = ["json"] } 
tempfile = "3.23.0"
critical-section = { version = "1.1.1", features = ["std"] }
qrcode = "0.14.1"
image = { version = "0.25.6", default-features = false } 
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

[profile.release]
strip = true         
lto = true           
codegen-units = 1     
panic = "abort"       
opt-level = "z"       


[build-dependencies]
winres = "0.1" 

